--- a/assets/css/box/box.css
+++ b/assets/css/box/box.css
@@ -1,7 +1,9 @@
 .box{
+    position: relative;
     width: 500px;
     height: 300px;
     padding: 15px 20px;
+    margin-top: 60px;
     background-color: #f5f5f5;
     border-radius: 16px;
     text-align: center;
